# poly-c12n

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  c12n.go  result.go  xrr_adapter.go  xrr_adapter_test.go
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
.kit/: version
c12n-core/: Cargo.toml
c12n-core/benches/: core_benchmarks.rs
c12n-core/include/: libc12n_core.h
c12n-core/src/: lib.rs  pipeline.rs  prototype.rs  signal.rs
c12n-core/src/signals/: code.rs  context.rs  cost.rs  language.rs  toolcall.rs
c12n-core/tests/common/: mod.rs
c12n-php/: README.md
c12n-php/src/: ClassificationContext.php  Pipeline.php  SignalResult.php
c12n-php/tests/: FfiTest.php  PipelineTest.php
c12n-py/: Cargo.toml
c12n-py/python/c12n/: middleware.py
c12n-py/tests/: test_config.py  test_review_regressions.py
c12n-ts/: README.md  package.json  tsconfig.json
c12n-ts/src/: context.ts  pipeline.ts
cmd/c12n/: bench.go  main_regressions_test.go
core/: CHANGELOG.md  Cargo.toml  build.rs  cbindgen.toml
core/benches/: core_benchmarks.rs
core/include/: libc12n_core.h
core/src/: embedding.rs  ffi.rs  pipeline.rs  prototype.rs  types.rs  wasm.rs
core/src/signals/: code.rs  complexity.rs  context.rs  cost.rs  domain.rs  embedding_signal.rs  feedback.rs  format.rs  keyword.rs  language.rs  mod.rs  preference.rs  safety.rs  structure.rs  toolcall.rs
core/tests/: e2e_stories.rs  ffi_integration.rs  pipeline_integration.rs  review_regressions.rs  signal_composition.rs
core/tests/common/: mod.rs
docs/adr/: 0001-c12n-ts-wasm-binding.md  0002-c12n-php-ffi-binding.md
docs/personas/: README.md
docs/personas/businesses/: cost-control-startup.md  llm-routing-saas.md
docs/personas/individuals/: framework-author.md  internal-tool-builder.md  middleware-developer.md
docs/stories/: README.md  US-0001-configure-pipeline.md  US-0002-classify-cli.md  US-0003-parse-pipeline-result.md  US-0004-bench-overhead.md  US-0005-low-confidence-detection.md  US-0006-toolspec-discovery.md  US-0007-json-ffi-roundtrip.md  US-0008-config-scope.md
go/: CHANGELOG.md  c12n_cgo.go  c12n_stub.go  c12n_stub_test.go  c12n_test.go  commands.go  commands_test.go  config.go  config.pkl  config_test.go  e2e_test.go  go.mod  go.sum  integration_test.go  result_test.go  review_regressions_test.go  types.go
go/cmd/c12n/: bench_regressions_test.go  classify.go  cli_test.go  completion.go  config_cmd.go  doctor.go  doctor_regressions_test.go  e2e_test.go  init.go  main.go  root.go  signals.go  tip.go  toolspec.go  upgrade.go
php/: .gitignore  CHANGELOG.md  README.md  composer.json
php/src/: ClassificationContext.php  Ffi.php  Installer.php  Pipeline.php  PipelineConfig.php  PipelineResult.php
php/src/Exception/: C12nException.php  PipelineException.php
php/tests/: InstallerTest.php  PipelineFfiIntegrationTest.php
py/: CHANGELOG.md  Cargo.toml  pyproject.toml
py/python/c12n/: __init__.py  config.py  router.py
py/src/: lib.rs
py/tests/: conftest.py  test_benchmarks.py  test_e2e_stories.py  test_integration.py  test_middleware.py  test_router.py
rs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
rs/src/: builder.rs  lib.rs  sdk_pipeline.rs
tools/: release-manifest.sh
ts/: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.browser.config.ts
ts/src/: index.ts  nodejs.ts  result.ts  wasm-loader.ts
ts/test/: bundler-smoke.test.ts  pipeline.integration.test.ts  pipeline.test.ts  setup.ts
