[package]
name = "c12n-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
async-trait = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "core_benchmarks"
harness = false
