[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hop-top-c12n"
version = "0.0.0-alpha.1"
description = "c12n classification engine — Python bindings"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "c12n"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "benchmark: performance benchmarks (set C12N_BENCH=1 to run)",
]
