[package]
name = "hop-top-c12n"
version = "0.0.0-alpha.1"
edition = "2021"
description = "Idiomatic Rust SDK for c12n — LLM request classification engine"
license = "TBD"
repository = "https://github.com/hop-top/poly-c12n"
homepage = "https://github.com/hop-top/poly-c12n"
keywords = ["llm", "classification", "routing"]
categories = ["api-bindings"]

[lib]
name = "hop_top_c12n"

[dependencies]
hop-top-c12n-core = { path = "../core" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
